--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 news-fact-checker/backend/.env
 news-fact-checker/backend/.env
 news-fact-checker/backend/__pycache__/main.cpython-310.pyc
+news-fact-checker/extension.zip
+news-fact-checker/extension.zip
