--- a/news-fact-checker/backend/requirements.txt
+++ b/news-fact-checker/backend/requirements.txt
@@ -9,6 +9,7 @@ langchain-perplexity>=0.0.2
 requests>=2.28.1
 beautifulsoup4>=4.11.1
 aiohttp>=3.8.3
-pymongo>=3.12.0,<4.0.0
+pymongo>=4.5.0
+motor>=3.3.0
 pytest>=7.0.0,<8.0.0
 mongomock>=4.1.0,<5.0.0
