--- a/news-fact-checker/extension/manifest.json
+++ b/news-fact-checker/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "TruthPilot",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "Analyzes news articles for misinformation and highlights problematic sections",
   "manifest_version": 3,
   "author": "TruthPilot Team",
@@ -11,7 +11,8 @@
     "notifications"
   ],
   "host_permissions": [
-    "https://news-notes.onrender.com/*"
+    "http://localhost:8000/*",
+    "https://*.onrender.com/*"
   ],
   "action": {
     "default_icon": {
@@ -21,8 +22,7 @@
     }
   },
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
