--- a/news-fact-checker/backend/requirements.txt
+++ b/news-fact-checker/backend/requirements.txt
@@ -1,13 +1,18 @@
-fastapi==0.104.1
+fastapi==0.115.12
 uvicorn==0.24.0
-pydantic==2.5.0
+pydantic==2.11.7
 python-dotenv==1.0.0
 pymongo==4.6.0
 langchain-perplexity==0.1.0
-langchain-core==0.1.0
+langchain-core==0.3.65
 requests>=2.28.1
 beautifulsoup4>=4.11.1
 aiohttp>=3.8.3
 motor>=3.3.0
 pytest>=7.0.0,<8.0.0
 mongomock>=4.1.0,<5.0.0
+# New dependencies for billing and authentication
+PyJWT>=2.8.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.6
+email-validator>=2.0.0
